# pca_app

./: CMakeLists.txt  PCA.cpp  PCA.h  README.md  SVC.cpp  SVC.h  csv.cpp  csv.h  dadosTabulares.h  doc_teste.csv  main.cpp
docs/: compilação_windows.md
include/: PCA.h  SVC.cpp  csv.cpp  dadosTabulares.h
src/: main.cpp
